@@ -117,6 +117,7 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 
 	private function makeRevisionWithProps( $props = null ) {
 		$this->hideDeprecated( 'Revision::insertOn' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		if ( $props === null ) {
 			$props = [];
@@ -242,6 +243,7 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	public function testInsertOn_success() {
 		$this->hideDeprecated( 'Revision::getTextId' );
 		$this->hideDeprecated( 'Revision::insertOn' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		$parentId = $this->testPage->getLatest();
 
@@ -341,6 +343,7 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	 */
 	public function testInsertOn_exceptionOnIncomplete( $array, $expException, $expMessage ) {
 		$this->hideDeprecated( 'Revision::insertOn' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		// If an ExternalStore is set don't use it.
 		$this->setMwGlobals( 'wgDefaultExternalStore', false );
@@ -834,6 +837,7 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 		$this->hideDeprecated( 'Revision::userWasLastToEdit' );
 		$this->hideDeprecated( 'Revision::insertOn' );
 		$this->hideDeprecated( 'Revision::getTimestamp' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 		$userA = User::newFromName( "RevisionStorageTest_userA" );
 		$userB = User::newFromName( "RevisionStorageTest_userB" );
 
@@ -944,6 +948,8 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	private function newTestRevision( $text, $title = "Test",
 		$model = CONTENT_MODEL_WIKITEXT, $format = null
 	) {
+		$this->hideDeprecated( 'Revision::__construct with an array' );
+
 		if ( is_string( $title ) ) {
 			$title = Title::newFromText( $title );
 		}
@@ -994,6 +1000,7 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	 */
 	public function testGetContentModelForEmptyRevision() {
 		$this->hideDeprecated( 'Revision::getContentModel' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		$rev = new Revision( [], 0, $this->testPage->getTitle() );
 
@@ -1035,6 +1042,7 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 		$this->hideDeprecated( 'Revision::getContentFormat' );
 		$this->hideDeprecated( 'Revision::getContentHandler' );
 		$this->hideDeprecated( 'Revision::getContentModel' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		$rev = new Revision( [], 0, $this->testPage->getTitle() );
 
@@ -1115,6 +1123,7 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	 */
 	public function testGetContent_failure() {
 		$this->hideDeprecated( 'Revision::getContent' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		$rev = new Revision( [
 			'page' => $this->testPage->getId(),
@@ -1182,6 +1191,7 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	 */
 	public function testGetContentClone() {
 		$this->hideDeprecated( 'Revision::getContent' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		$content = new RevisionTestModifyableContent( "foo" );
 
@@ -1419,6 +1429,8 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	 * @covers Revision::getTitle
 	 */
 	public function testGetTitle_fromRevisionWhichWillLoadTheTitle() {
+		$this->hideDeprecated( 'Revision::__construct with an array' );
+
 		$rev = new Revision( [ 'id' => $this->testPage->getLatest() ] );
 		$this->assertTrue(
 			$this->testPage->getTitle()->equals(
@@ -1773,6 +1785,7 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	 */
 	public function testUserCan( $bitField, $field, $userGroups, $expected ) {
 		$this->hideDeprecated( 'Revision::userCan' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		$this->setGroupPermissions(
 			[
@@ -1796,6 +1809,8 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	}
 
 	public function provideGetTextId() {
+		$this->hideDeprecated( 'Revision::__construct with an array' );
+
 		$title = $this->getMockTitle();
 
 		$rev = new Revision( [], 0, $title );
@@ -1828,6 +1843,8 @@ class RevisionDbTest extends MediaWikiIntegrationTestCase {
 	}
 
 	public function provideGetSerializedData() {
+		$this->hideDeprecated( 'Revision::__construct with an array' );
+
 		$title = $this->getMockTitle();
 
 		$rev = new Revision( [], 0, $title );
