@@ -195,6 +195,7 @@ class WikiPageDbTest extends MediaWikiLangTestCase {
 	 */
 	public function testDoEditUpdates_revision() {
 		$this->hideDeprecated( 'WikiPage::doEditUpdates with a Revision object' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		$user = $this->getTestUser()->getUser();
 
@@ -1948,6 +1949,7 @@ more stuff
 	public function testUpdateRevisionOn_existingPage() {
 		$this->hideDeprecated( 'WikiPage::getRevision' );
 		$this->hideDeprecated( 'WikiPage::updateRevisionOn with a Revision object' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		$user = $this->getTestSysop()->getUser();
 		$page = $this->createPage( __METHOD__, 'StartText' );
@@ -1980,6 +1982,7 @@ more stuff
 	 */
 	public function testUpdateRevisionOn_NonExistingPage() {
 		$this->hideDeprecated( 'WikiPage::updateRevisionOn with a Revision object' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 
 		$user = $this->getTestSysop()->getUser();
 		$page = $this->createPage( __METHOD__, 'StartText' );
@@ -2011,6 +2014,7 @@ more stuff
 	 */
 	public function testUpdateIfNewerOn_olderRevision() {
 		$this->hideDeprecated( 'Revision::getTimestamp' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 		$this->hideDeprecated( 'WikiPage::getRevision' );
 		$this->hideDeprecated( 'WikiPage::updateIfNewerOn' );
 
@@ -2049,6 +2053,7 @@ more stuff
 	 */
 	public function testUpdateIfNewerOn_newerRevision() {
 		$this->hideDeprecated( 'Revision::getTimestamp' );
+		$this->hideDeprecated( 'Revision::__construct with an array' );
 		$this->hideDeprecated( 'WikiPage::getRevision' );
 		$this->hideDeprecated( 'WikiPage::updateIfNewerOn' );
 
